7 April 2016: Wouter
	- If set without nsd.db print "" as the default in the man pages.

4 April 2016: Wouter
	- Fix #751: NSD fails to occlude names below a DNAME.

24 March 2016: Wouter
	- Fix for openssl 1.1.0, HMAC_CTX size not exported from openssl.

21 March 2016: Wouter
	- Update acx_nlnetlabs.m4 to version 33 with HMAC_Update test.
	- acx_nlnetlabs.m4 to v34, with -ldl -pthread test for libcrypto.

15 March 2016: Wouter
	- ip-freebind: yesno option in nsd.conf sets IP_FREEBIND socket option
	  for Linux, binds to interfaces and addresses that are down.
	- Change the nsd.db file version because of nanosecond precision fix.
	- 4.1.9 release with the nsd.db file version fix (but not freebind),
	  trunk contains 4.1.10 in development.

10 March 2016: Wouter
	- Tag 4.1.8
	- Trunk contains 4.1.9 in development.

2 March 2016: Wouter
	- Tag 4.1.8rc1

1 March 2016: Wouter
	- #744: Fix that NSD replies for configured but unloaded zone
	  with SERVFAIL, not REFUSED.

16 February 2016: Wouter
	- RR type CSYNC (RFC7477) syntax is supported.

29 January 2016: Wouter
	- #739: zonefile changes when mtime is small are detected on reload,
	  if filesystem supports precision mtime values.

19 January 2016: Wouter
	- Fix #736: segfault during zone transfer.

08 January 2016: Wouter
	- Define _DEFAULT_SOURCE with _BSD_SOURCE for recent Linuxes.

05 January 2016: Wouter
	- #732: tcp-mss, outgoing-tcp-mss options for nsd.conf, patch
	  from Daisuke Higashi.

04 January 2016: Wouter
	- Updated acx_nlnetlabs to version 32.

11 December 2015: Wouter
	- Fix flto check for OSX clang.

10 December 2015: Wouter
	- 4.1.7 release
	- trunk has 4.1.8 in development.
	- take advantage of arc4random_uniform if available, patch from
	  Loganaden Velvindron.

3 December 2015: Wouter
	- tag for 4.1.7rc1 prerelease.

2 December 2015: Wouter
	- configure --enable-ratelimit-default-is-off with --enable-ratelimit
	  to set the default ratelimit to disabled but available in nsd.conf.